--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^16.0.1",
     "hardhat": "^2.9.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -42,6 +43,7 @@
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.4",
-    "ethers": "^5.6.8"
+    "ethers": "^5.6.8",
+    "hardhat-gas-reporter": "^1.0.8"
   }
 }
